[tool.poetry]
name = "fastapi-tut"
version = "0.1.0"
description = ""
authors = ["mastergandar <titanitewow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"
pydantic = {extras = ["email"], version = "^2.6.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
